- a bug with P4A_DB_Source::_composeSelectCountQuery() and UNION queries was solved (thanks to alexiadeath)
- P4A_Tab_Pane CSS is now loaded by default
- P4A_Table::setVisible cols now also manages column order
- a bug on P4A::openPopup() passing javascripts thru an ajax call was solved
- P4A::isPopupOpened() was added
- P4A::openMask() can now be called thru an ajax action

1.99.22
- P4A_Is_Error(), P4A_New_Line() and P4A_Space() were removed
- DB adapter (adodb) inclusion was moved to p4a_db.php thus it's easier to use p4a_db outsite a p4a application
- P4A_Field::setError() was added
- P4A_Validate class was added to check emails/uris/dates/numbers etc... (now it simply uses PEAR::Validate)
- some changes were done on products_catalogue sample application
- New rich_textarea skin was added

1.99.21
- PEAR::Console_Getopt 1.2.2 was re-introduced to avoid installation problems
- P4A_Object::dropIntercept() method wad added
- P4A_Table::addActionCol() method was added
- P4A_Table_Col::setValue() method was added

1.99.20
- PEAR 1.5.0 base package was re-introduced to avoid installation problems

1.99.19
- a bug with P4A_Object::errorHandler() was fixed
- PEAR::MDB2 was dropped
- ADODB 494 was introduces as the new database abstraction library
- automatic sequence detection/creation on numeric/primary key was added
- P4A_AUTO_DB_SEQUENCES (default to true) constant was added to enable/disable automatic sequence detection/creation
- PEAR packages stripdown, all basic pear packages were removed cause they're always present on PHP servers
- PEAR::File and PEAR::File_SWF were removed cause they were unused
- PEAR::Date was updated to 1.4.7
- a bug with P4A_Table and long numbers formatting was fixed
- PEAR::HTML_Template_Flexy and P4A_Template_Engine were dropped
- all templates were converted to PHP templates, gaining performance
- P4A_AJAX_DEBUG should not be set to "true" anymore but should be set to the path of the debugging file