@@ -6,6 +6,7 @@
 - a bug on P4A::openPopup() passing javascripts thru an ajax call was solved
 - P4A::isPopupOpened() was added
 - P4A::openMask() can now be called thru an ajax action
+- now a single P4A_Table row can be disabled, you need to intercept the beforeDisplay on P4A_Table_Rows object and add a "_p4a_enabled" index to the row setting it to true/false
 
 1.99.22
 - P4A_Is_Error(), P4A_New_Line() and P4A_Space() were removed
